gke-setup/apigee-adapter-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: apigee-adapter-gateway
  namespace: apigee
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
    - name: http
      port: 80
      protocol: HTTP
