gke-setup/apigee-adapter-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: apigee-adapter-httproute
  namespace: apigee
spec:
  parentRefs:
    - kind: Gateway
      name: apigee-adapter-gateway
  rules:
    - backendRefs:
        - name: apigee-adapter-service
          port: 443
